--- a/Notebooks/Phase01.Part02.Collect_renting_data.ipynb
+++ b/Notebooks/Phase01.Part02.Collect_renting_data.ipynb
@@ -7,7 +7,9 @@
     "<!-- Name: Pham Le Tu Nhi -->\n",
     "<!-- Student ID: 21120308 -->\n",
     "\n",
-    "# Phase 01: Data collection \n",
+    "# **Phase 01: Data collection** \n",
+    "\n",
+    "## Part 02: Collect real estate for rent data\n",
     "\n",
     "We're be collecting data from [this website](https://batdongsan.com.vn). It's a popular website for real estate property exchange (buying and renting) in Vietnam.\n",
     "\n",
@@ -48,7 +50,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And let's prepare the necessary informations for our data collection."
+    "Now let's prepare our scraper. But first, let's talk about the legality of the our webscraping. \n",
+    "\n",
+    "During our research of the website, we see that there is not clear Term of Service (or Use) toward people who access the website without an account, and there isn't any listed Disallow agent or terms in `Robots.txt`, and because we are using the data collected for education purposes, we decided that it is within the law - that is it's legal to collect and analyze the data we have collected from the website.\n",
+    "\n",
+    "During our data collection, we've identify that the website uses Cloudguard technology to identify and prevent non-human agent to access and collect data. To bypass this, we're going to use the Cloudscraper library and some tricks - mainly changing the headers of the requests. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Collect the urls for all rent posting\n",
+    "\n",
+    "Let's collect all the URLs that leads to all current available rent posting."
    ]
   },
   {
@@ -61,41 +76,7 @@
     "url = 'https://batdongsan.com.vn/nha-dat-cho-thue-tp-hcm'\n",
     "\n",
     "# Scraped URL list\n",
-    "url_list = []\n",
-    "\n",
-    "# Define columns names and export file name\n",
-    "fields = [ 'Address', 'Area', 'Price','Rent type', 'Bedroom', 'Toilet', 'Floor', 'Furniture','Posting date', 'Expiry date', 'Ad type', 'Ad code']\n",
-    "file_name = 'hcm_rental_propertiest.csv'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now let's prepare our scraper. But first, let's talk about the legality of the our webscraping. \n",
-    "\n",
-    "During our research of the website, we see that there is not clear Term of Service (or Use) toward people who access the website without an account, and there isn't any listed Disallow agent or terms in `Robots.txt`, and because we are using the data collected for education purposes, we decided that it is within the law - that is it's legal to collect and analyze the data we have collected from the website.\n",
-    "\n",
-    "During our data collection, we've identify that the website uses Cloudguard technology to identify and prevent non-human agent to access and collect data. To bypass this, we're going to use the Cloudscraper library and some tricks - mainly changing the headers of the requests. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Scrape data\n",
-    "scraper = cloudscraper.create_scraper(delay=10, browser=\"chrome\") "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Collect the urls for all rent posting\n",
-    "\n",
-    "Let's collect all the URLs that leads to all current available rent posting."
+    "url_list = []"
    ]
   },
   {
@@ -104,6 +85,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Scrape data\n",
+    "scraper = cloudscraper.create_scraper(delay=10, browser=\"chrome\") \n",
+    "\n",
     "# Get content of the first page\n",
     "content = scraper.get(url)\n",
     "\n",
@@ -140,7 +124,7 @@
    "outputs": [],
    "source": [
     "# Save scraped urls in file \n",
-    "file_name = 'rental_properties_url.txt'\n",
+    "file_name = 'Data/rental_properties_url.txt'\n",
     "\n",
     "with open(file_name, 'w') as file:\n",
     "    for line in url_list:\n",
@@ -151,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scrape the contents of rent posting\n",
+    "## 2. Scrape the contents of rent posting\n",
     "\n",
     "Now let's actually go out and scrape the data on the page of each rent posting. Do to this, we have to load the url list that we have saved from the first step."
    ]
@@ -234,13 +218,6 @@
     "# address | rent type | metadata | post date\n",
     "fields = [ 'Address', 'Rent type', 'Meta data', 'Post date']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -2275,7 +2252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_file = 'hcm_rent_data.csv'\n",
+    "export_file = '../Data/hcm_rent_data.csv'\n",
     "renting_data.to_csv(export_file, mode='a', header=None)"
    ]
   },
