--- a/Notebooks/Phase03.Part02.Asking_renting_questions.ipynb
+++ b/Notebooks/Phase03.Part02.Asking_renting_questions.ipynb
@@ -256,7 +256,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('processed_rent_data.csv', index_col=0)\n",
+    "data = pd.read_csv('../Data/processed_rent_data.csv', index_col=0)\n",
     "data = data[data['Rent type'] != 'Bất động sản khác']\n",
     "data"
    ]
