--- a/Notebook/Phase05.Part02.Reflection.ipynb
+++ b/Notebook/Phase05.Part02.Reflection.ipynb
@@ -116,6 +116,13 @@
     "\n",
     "I was fortunate to have Huynh Cao Khoi as my teammate for this project. Though we are both unfamiliar with building a DS project, the team was copperative and very open to discussions from small ideas to major. I learned many things from working with Khoi, one of that is his orientation toward structured format and his cares towards designing a good visualization, and how he thinks about the people's experience reading and understanding his analysis. I think putting care into your craft and try to live up to your standard (even though you don't have the necessary experience and knowledge) is admirable. \n",
     "\n",
+    "\n",
+    "<span style=\"color:grey\">\n",
+    "---\n",
+    "</span>\n",
+    "\n",
+    "Another things that I learn is with our work process. We work in a parallel systems where I handle the rent data and Khoi handle the sell data. It's not a realistic approach because it takes a lot of time and I believe in a work setting people would settle for roles that is more specialize to their ability, but it is a good approach for educational purpose. Having essentially similar dataset makes us relate easily with one another findings while being different enough to **not get in each other ways**. We have had discussion about small details and big ideas in work and about real estate, and I think coming out we know more now than we got started, which is the ultimate goal for me.\n",
+    "\n",
     "### 1.4 What I will do next\n",
     "\n",
     "There are 4 things I would like to do after this project:\n",
@@ -131,7 +138,37 @@
     "This section is my review of my teammate, Khoi's work.\n",
     "\n",
     "#### 1.5.1 Interesting points\n",
-    "\n"
+    "\n",
+    "Here are some points in Khoi's work that I found interesting:\n",
+    "- His use of interactive graph: This is very good to help visualize and understand the data. Also, because he uses stacked bar chart, it helps a lot to not make the graph overwhelming and hard to see.\n",
+    "- His use of `highlighted annotation` are clear and helpful for reading/skimming through the text.\n",
+    "- His defined style of graph. It think it shows how meticulous he can be (which is a good thing most of the time).\n",
+    "\n",
+    "##### Strength\n",
+    "\n",
+    "The strength of Khoi shows in his work in his ability to` manage and catagorize notebook`, and his meticulous attention to details of his analyis. The structure he choose are simple and logical, introduce the context, guiding the reader to get to know the data with graphs, give comments and summarise. Being consistent with practice takes attention and care, and I think it's shows in his work. His questions are also more discrete than mine, so I rely much on his suggestions moving along with my analysis.\n",
+    "\n",
+    "Working with Khoi, I also notice that he's a hard working person, and knows how to organize his work. \n",
+    "\n",
+    "##### Weakness\n",
+    "\n",
+    "The weakness of Khoi shows not in his final products (I'm reading it again but all I realize is that I'm not very good at judging things) but in his work process. Khoi is hard working and a bit of a perfectionist, which prone him overwork himself and sometimes to burn out. I think feeling the need to tend to everything at once and make it good is important but knowing what is really that you're doing and what is the goal is very important too.\n",
+    "\n",
+    "Saying this, I don't think I'm any better. This is a lesson I'm still learning.\n",
+    "\n",
+    "Otherwise, many of his shortcomings are similar to mine. Our lack of domain knowledge, lack of application of statistics (comes in the form of using descriptive parameters, frequencies of using charts like boxplot), and taking a lot of times to work things out.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "That's then end of my analysis and work on this project. I'd like to express my gratitute for everyone who has helped me complete this project.\n",
+    "\n",
+    "Thank you HCK for being a good mate and carrying me :)\n",
+    "\n",
+    "Thank you Mr.Thanh for being pationate and teaching me a lot of stuff I didn't know before.\n",
+    "\n",
+    "Thank you Mr.Nam for answering my questions and giving me a better perspective on our industry.\n",
+    "\n",
+    "And thank you for reading. "
    ]
   }
  ],
