--- a/Notebook/Phase05.Part02.Reflection.ipynb
+++ b/Notebook/Phase05.Part02.Reflection.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "> From what character's point of view am I viewing the data?\n",
     "\n",
-    "Essentially what this is saying is I'm treating a dataset like a story, and I have to choose a character in that story's perspective to make sense of anything. There have to be a constant (perspective) to make sense of things because people understand things in the form of story. In my analysis, I take the perspective of the college student curious of the real estate market in Ho chi Minh. Yes, I did in a way - cosplay my self, but it bring context to my questions. Becuase asking a question from my point of view (a person who barely know anything about real estate) is different from the perspective of my parents (home owners) or of real estate agents (have access to large and accurate real estate data).\n",
+    "Essentially what this is saying is I'm treating a dataset like a story, and I have to choose a character in that story's perspective to make sense of anything. There have to be a constant (perspective) to make sense of things because people understand things in the form of story. In my analysis, I take a perspective of a young real estate broker who want to understand the real estate renting market in Ho Chi Minh city. I found defining the perspective is very important, becuase asking a question from a my point of view (a person who barely know anything about real estate) is different from the perspective of my parents (home owners) or of real estate agents (have access to large and accurate real estate data).\n",
     "\n",
     "In short, it helps me narrow down on what questions **I want to ask** and what answer **I can understand**. \n",
     "\n"
