--- a/Notebook/Phase03.Part02.Asking_renting_questions.ipynb
+++ b/Notebook/Phase03.Part02.Asking_renting_questions.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 1: How are the type of real estate distributed by district in Ho Chi Minh city? \n",
+    "# Phase 03: Exploratory data analysis\n",
     "\n",
-    "For this question, we are investigating the real estate product type (ex. `Căn hộ chung cư`, `Văn phòng`...) and how they are related to districts in Ho Chi Minh city and vice versa. Although at first the question seems quite simple, it becomes quite complex as we dig deeper into the data."
+    "### Importing necessary Python module"
    ]
   },
   {
@@ -21,21 +21,14 @@
     "import matplotlib as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "import plotly.express as px\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import plotly.express as px\n",
+    "\n",
     "# Define the display of long decimal values\n",
     "def thousands_formatter(x):\n",
     "    if isinstance(x, str):\n",
     "        return x\n",
     "    return \"{:,}\".format(int(x))\n",
-    "pd.set_option('display.float_format', thousands_formatter)"
+    "pd.set_option('display.float_format', thousands_formatter)\n"
    ]
   },
   {
@@ -259,6 +252,17 @@
     "data = pd.read_csv('../Data/processed_rent_data.csv', index_col=0)\n",
     "data = data[data['Rent type'] != 'Bất động sản khác']\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For every questions, I'm asking from the perspective of a young real estate broker who want to understand the real estate for rent market in Ho Chi Minh city. Most of my questions will therefore, be explorative and not too focus on decision making.\n",
+    "\n",
+    "### Question 1: How are the type of real estate distributed by district in Ho Chi Minh city? \n",
+    "\n",
+    "For this question, we are investigating the real estate product type (ex. `Căn hộ chung cư`, `Văn phòng`...) and how they are related to districts in Ho Chi Minh city and vice versa. Although at first the question seems quite simple, it becomes quite complex as we dig deeper into the data. "
    ]
   },
   {
@@ -631,6 +635,24 @@
     "- `Thủ Đức District`: Popular with `Căn hộ chung cư`, `Kho, nhà xưởng, đất`.\n",
     "- `Tân Bình District`: Popular with `Nhà trọ, phòng trọ`.\n",
     "- `Tân Phú District`: Popular with `Căn hộ chung cư`, `Kho, nhà xưởng, đất`, `Nhà trọ, phòng trọ`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Conclusion:**\n",
+    "\n",
+    "This is what we learned from our analysis:\n",
+    "- `District 2`, `District 7`, `Tân Bình District`, `1st District` has the most number of property rent available.\n",
+    "- `Căn hộ chung cư`, `Nhà trọ, phòng trọ`, `Kho, nhà xưởng, đât` and `Văn phòng` are the most popular property types for rent.\n",
+    "- Each property type is distributed differently, but mostly focuses in specific districts (which resulted in being that district's \"specialty\").\n",
+    "- Each districts has different distribution of property type, while some has more diverse range of property type to offer, some focues exclusively on 1 type.\n",
+    "\n",
+    "As a real estate broker, this understanding will help us with:\n",
+    "- Understand the overall renting market in Ho Chi Minh city and distribution in disticts.\n",
+    "- Deciding where to look for real estate deal given property type.\n",
+    "- Deciding what property to look for given an districts."
    ]
   },
   {
@@ -6069,6 +6091,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Conclusion:**\n",
+    "\n",
+    "This is what we learned from our analysis:\n",
+    "- `Nhà mặt phố`, `Kho, nhà xưởng, đất`, `Nhà biệt thự liền kề` are the most expensive property for rent.\n",
+    "- The cost of real estate for rent differ from property type to property type, but most are not evenly distributed, meaning the cost in some districts far outweight the cost in the majority.\n",
+    "- There isn't a concrete relation between the `Area` and `Price` of real estate. Although we do see that if accounted for area, the cost of each property are overall, evenly distributed.\n",
+    "\n",
+    "As a real estate broker, this understanding will help us with:\n",
+    "- Understand the distribution of cost and relation between cost and area.\n",
+    "- Decide whether to take on a specific property type depends on be base cost.\n",
+    "- Decide which districts to consider while looking for property in a specific type and price range looking for (high-end or cheap)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Question 3: Which factors will affect the price of each property type? \n",
     "\n",
     "In other word: What is the relationship between the price and other factor?"
@@ -6233,30 +6272,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Conclusion:**\n",
+    "\n",
+    "Each property type has different correlation to each districts, and each features accounted. Understanding these different is going to comes in handy when determine the price of a property for rent.\n",
+    "\n",
+    "As a real estate broker, this understanding will help us with:\n",
+    "- Decide the price of a property based districts and other predictors depends on property type."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving our data for model building\n",
+    "\n",
+    "Since we have already transform the columns and build the complete data set for modeling, let's save this data to use for our modeling later."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_estate_price_district.drop(['District', 'Furniture', 'Rent type', 'Area', 'Price', 'Floors', 'Bedrooms', 'Toilets'], axis=1, inplace=True)"
+    "real_estate_price_district.drop(['District', 'Furniture', 'Rent type', 'Area', 'Price', 'Floors', 'Bedrooms', 'Toilets'], axis=1, inplace=True)\n",
+    "corr_data = pd.concat([real_estate_price, real_estate_price_district], axis=1)\n",
+    "corr_data.to_csv('rent_data_ready_for_ml.csv')\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "corr_data = pd.concat([real_estate_price, real_estate_price_district], axis=1)# on=['Rent type', 'Area', 'Bedrooms', 'Toilets', 'Floors', 'Price'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corr_data.to_csv('rent_data_ready_for_ml.csv')"
+    "That's the end of my EDA. Next up is to build our predictive model. "
    ]
   }
  ],
