--- a/Notebook/Phase04.Part02.Building_renting_models.ipynb
+++ b/Notebook/Phase04.Part02.Building_renting_models.ipynb
@@ -574,7 +574,9 @@
     "1. Using `cross_val_score`: This method allows us to measure the accuracy of a models on multiple datasets to determine the best score. \n",
     "2. Using `GridSearchCV`: This method allows us to tune hyperparameters of a model while feeding k-fold datasets to determine the best hyperparameter for the model.\n",
     "\n",
-    "In practice, we can use both to do model selection. But a more realist setting, Data Scientist would most likely use `GridSearchCV` to model select and tune at the same time. We are goint with the second approach as we have already gone with the first approach in part 01."
+    "In practice, we can use both to do model selection. But a more realist setting, Data Scientist would most likely use `GridSearchCV` to model select and tune at the same time. We are goint with the second approach as we have already gone with the first approach in part 01.\n",
+    "\n",
+    "For the data, we will using the features of `Area`, `Bedrooms`, `Toilets` and all of districts to predict price. We won't be accounting the values of `Furniture` becuase they don't have a high correlation to `Căn hộ chung cư` price in our EDA."
    ]
   },
   {
@@ -591,7 +593,7 @@
    "outputs": [],
    "source": [
     "# Prepare predictors and response variable\n",
-    "## TODO: Re tweek this please\n",
+    "# Note: we will not be using furniture data as it shows low correlation in our EDA\n",
     "x = data.loc[:, ['Area', 'Bedrooms', 'Toilets', '1', '10', '11', '12', '2', '3', '4', '5', '6', '7', '8', '9',\n",
     "       'bình chánh', 'bình thạnh', 'bình tân', 'củ chi', 'gò vấp', 'hóc môn',\n",
     "       'nhà bè', 'phú nhuận', 'thủ đức', 'tân bình', 'tân phú']]\n",
