--- a/Notebook/Phase04.Part02.Building_renting_models.ipynb
+++ b/Notebook/Phase04.Part02.Building_renting_models.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,17 +27,15 @@
     "import plotly.express as px\n",
     "import seaborn as sns\n",
     "\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import GridSearchCV, train_test_split\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.linear_model import Lasso, ElasticNet\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.linear_model import LinearRegression, Ridge\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.model_selection import cross_val_score, cross_validate\n",
-    "from sklearn.metrics import make_scorer, mean_squared_error, r2_score,mean_absolute_error"
+    "\n",
+    "import joblib"
    ]
   },
   {
@@ -49,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('rent_data_ready_for_ml.csv', index_col=0)"
+    "data = pd.read_csv('../Data/rent_data_ready_for_ml.csv', index_col=0)"
    ]
   },
   {
@@ -67,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +375,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 453,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +439,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 456,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -712,48 +710,48 @@
        "      <td>multiple_linear_regression</td>\n",
        "      <td>0.587640</td>\n",
        "      <td>{'fit_intercept': False}</td>\n",
-       "      <td>0.002086</td>\n",
-       "      <td>0.012074</td>\n",
+       "      <td>0.002522</td>\n",
+       "      <td>0.016059</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ridge_regression</td>\n",
        "      <td>0.587641</td>\n",
        "      <td>{'alpha': 0.1}</td>\n",
-       "      <td>0.002918</td>\n",
-       "      <td>0.013628</td>\n",
+       "      <td>0.001892</td>\n",
+       "      <td>0.010738</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>lasso_regression</td>\n",
        "      <td>0.471158</td>\n",
        "      <td>{'alpha': 0.1}</td>\n",
-       "      <td>0.002341</td>\n",
-       "      <td>0.016372</td>\n",
+       "      <td>0.002611</td>\n",
+       "      <td>0.018407</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>elasticnet_regression</td>\n",
        "      <td>0.481384</td>\n",
        "      <td>{'alpha': 0.1, 'l1_ratio': 0.3}</td>\n",
-       "      <td>0.002111</td>\n",
-       "      <td>0.014765</td>\n",
+       "      <td>0.002235</td>\n",
+       "      <td>0.015290</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>dtree_regression</td>\n",
        "      <td>0.541051</td>\n",
        "      <td>{'max_depth': 7, 'min_samples_leaf': 1, 'min_s...</td>\n",
-       "      <td>0.002059</td>\n",
-       "      <td>0.010155</td>\n",
+       "      <td>0.002378</td>\n",
+       "      <td>0.010913</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>random_forest</td>\n",
-       "      <td>0.702260</td>\n",
+       "      <td>0.702032</td>\n",
        "      <td>{'max_depth': None, 'min_samples_leaf': 2, 'mi...</td>\n",
-       "      <td>0.016727</td>\n",
-       "      <td>1.120906</td>\n",
+       "      <td>0.022008</td>\n",
+       "      <td>1.546768</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -766,26 +764,26 @@
        "2            lasso_regression    0.471158   \n",
        "3       elasticnet_regression    0.481384   \n",
        "4            dtree_regression    0.541051   \n",
-       "5               random_forest    0.702260   \n",
+       "5               random_forest    0.702032   \n",
        "\n",
        "                                         best_params  mean_score_time  \\\n",
-       "0                           {'fit_intercept': False}         0.002086   \n",
-       "1                                     {'alpha': 0.1}         0.002918   \n",
-       "2                                     {'alpha': 0.1}         0.002341   \n",
-       "3                    {'alpha': 0.1, 'l1_ratio': 0.3}         0.002111   \n",
-       "4  {'max_depth': 7, 'min_samples_leaf': 1, 'min_s...         0.002059   \n",
-       "5  {'max_depth': None, 'min_samples_leaf': 2, 'mi...         0.016727   \n",
+       "0                           {'fit_intercept': False}         0.002522   \n",
+       "1                                     {'alpha': 0.1}         0.001892   \n",
+       "2                                     {'alpha': 0.1}         0.002611   \n",
+       "3                    {'alpha': 0.1, 'l1_ratio': 0.3}         0.002235   \n",
+       "4  {'max_depth': 7, 'min_samples_leaf': 1, 'min_s...         0.002378   \n",
+       "5  {'max_depth': None, 'min_samples_leaf': 2, 'mi...         0.022008   \n",
        "\n",
        "   mean_fit_time  \n",
-       "0       0.012074  \n",
-       "1       0.013628  \n",
-       "2       0.016372  \n",
-       "3       0.014765  \n",
-       "4       0.010155  \n",
-       "5       1.120906  "
+       "0       0.016059  \n",
+       "1       0.010738  \n",
+       "2       0.018407  \n",
+       "3       0.015290  \n",
+       "4       0.010913  \n",
+       "5       1.546768  "
       ]
      },
-     "execution_count": 465,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1183,7 @@
        "[91 rows x 29 columns]"
       ]
      },
-     "execution_count": 463,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1235,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that the price falls in a reasonable range. This is good, since that mean our models - although not *perfect*, is able to predict price range modestly and resonably.\n",
+    "We see that the price falls in a reasonable range. This is good, since that mean our models - although not *perfect*, is able to predict price range modestly and resonably.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Deploy the model\n",
+    "\n",
+    "Similar to Part 01, we will be deploying our model using Streamlit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../Deploy/decision_tree_model_for_rent.sav']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(ridge_regression, \"../Deploy/decision_tree_model_for_rent.sav\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "---\n",
     "\n",
