Standardize file name

--- a/Notebook/Phase02.Part02.Process_renting_data.ipynb
+++ b/Notebook/Phase02.Part02.Process_renting_data.ipynb
@@ -142,7 +142,7 @@
     }
    ],
    "source": [
-    "rent_data = pd.read_csv('../Data/hcm_rent_data.csv', index_col=0)\n",
+    "rent_data = pd.read_csv('../Data/rent_data.csv', index_col=0)\n",
     "rent_data.head()"
    ]
   },
