--- a/Notebook/Phase03.Part02.Asking_renting_questions.ipynb
+++ b/Notebook/Phase03.Part02.Asking_renting_questions.ipynb
@@ -6300,7 +6300,7 @@
    "source": [
     "real_estate_price_district.drop(['District', 'Furniture', 'Rent type', 'Area', 'Price', 'Floors', 'Bedrooms', 'Toilets'], axis=1, inplace=True)\n",
     "corr_data = pd.concat([real_estate_price, real_estate_price_district], axis=1)\n",
-    "corr_data.to_csv('../Data/rent_data_ready_for_ml.csv')"
+    "corr_data.to_csv('../Data/ml_rent_data.csv')"
    ]
   },
   {
