--- a/Notebook/Phase04.Part02.Building_renting_models.ipynb
+++ b/Notebook/Phase04.Part02.Building_renting_models.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('../Data/rent_data_ready_for_ml.csv', index_col=0)"
+    "data = pd.read_csv('../Data/ml_rent_data.csv', index_col=0)"
    ]
   },
   {
