--- a/Notebook/Phase01.Part02.Collect_renting_data.ipynb
+++ b/Notebook/Phase01.Part02.Collect_renting_data.ipynb
@@ -2252,7 +2252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_file = '../Data/hcm_rent_data.csv'\n",
+    "export_file = '../Data/rent_data.csv'\n",
     "renting_data.to_csv(export_file, mode='a', header=None)"
    ]
   },
