--- a/Notebook/Phase01.Part02.Collect_renting_data.ipynb
+++ b/Notebook/Phase01.Part02.Collect_renting_data.ipynb
@@ -124,7 +124,7 @@
    "outputs": [],
    "source": [
     "# Save scraped urls in file \n",
-    "file_name = 'Data/rental_properties_url.txt'\n",
+    "file_name = '../Data/real_estate_for_rent_link.txt'\n",
     "\n",
     "with open(file_name, 'w') as file:\n",
     "    for line in url_list:\n",
@@ -2252,7 +2252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_file = '../Data/rent_data.csv'\n",
+    "export_file = '../Data/real_estate_for_rent.csv'\n",
     "renting_data.to_csv(export_file, mode='a', header=None)"
    ]
   },
