--- a/Notebook/Phase02.Part02.Process_renting_data.ipynb
+++ b/Notebook/Phase02.Part02.Process_renting_data.ipynb
@@ -29,8 +29,8 @@
     "import json\n",
     "import re\n",
     "\n",
-    "# -*- coding: utf-8 -*-\n",
     "# For NLP (furniture data)\n",
+    "#!pip install underthesea\n",
     "from underthesea import pos_tag\n",
     "\n",
     "# Define the display of long decimal values\n",
@@ -142,7 +142,7 @@
     }
    ],
    "source": [
-    "rent_data = pd.read_csv('../Data/rent_data.csv', index_col=0)\n",
+    "rent_data = pd.read_csv('../Data/real_estate_for_rent.csv', index_col=0)\n",
     "rent_data.head()"
    ]
   },
@@ -1519,7 +1519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_file = '../Data/processed_rent_data.csv'\n",
+    "export_file = '../Data/cleaned_real_estate_for_rent.csv'\n",
     "final_df.to_csv(export_file)"
    ]
   },
