--- a/Notebook/Phase03.Part02.Asking_renting_questions.ipynb
+++ b/Notebook/Phase03.Part02.Asking_renting_questions.ipynb
@@ -249,7 +249,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('../Data/processed_rent_data.csv', index_col=0)\n",
+    "data = pd.read_csv('../Data/cleaned_real_estate_for_rent.csv', index_col=0)\n",
     "data = data[data['Rent type'] != 'Bất động sản khác']\n",
     "data"
    ]
@@ -6300,7 +6300,7 @@
    "source": [
     "real_estate_price_district.drop(['District', 'Furniture', 'Rent type', 'Area', 'Price', 'Floors', 'Bedrooms', 'Toilets'], axis=1, inplace=True)\n",
     "corr_data = pd.concat([real_estate_price, real_estate_price_district], axis=1)\n",
-    "corr_data.to_csv('../Data/ml_rent_data.csv')"
+    "corr_data.to_csv('../Data/ml_real_estate_for_rent.csv')"
    ]
   },
   {
