--- a/Notebook/Phase01.Part01.Collect_selling_data.ipynb
+++ b/Notebook/Phase01.Part01.Collect_selling_data.ipynb
@@ -61,6 +61,7 @@
    "source": [
     "fields = [ 'Address', 'Type', 'Area', 'Price', 'Bedroom', 'Toilet', 'Floor', 'Furniture', 'Direction','Legal', 'Posting date', 'Expiry date', 'Ad type', 'Ad code']\n",
     "\n",
+    "# Create a empty data frame with these fields\n",
     "df = pd.DataFrame(columns = fields)"
    ]
   },
@@ -112,6 +113,7 @@
     "    regex = r'[^\\s]+'\n",
     "    matchs = re.findall(regex, unprocessed_num_page.text)\n",
     "    new_array = []\n",
+    "    \n",
     "    for match in matchs:\n",
     "        new_array.append(int(match.replace('.', '')))\n",
     "\n",
@@ -151,12 +153,14 @@
    "source": [
     "def CollectRealEstateForSaleLink (url, page):\n",
     "    with open (file_name, 'w') as file:\n",
+    "        # Acess to all page\n",
     "        for i in range(1, page + 1):\n",
     "            driver = webdriver.Chrome()\n",
     "            driver.get(url+'/p'+ str(i))\n",
     "            soup = soup(driver.page_source, 'html.parser')\n",
     "            apartment_list = soup.find_all(\"a\", class_= \"js__product-link-for-product-id\")\n",
     "\n",
+    "            # Add all links to the file\n",
     "            for apartment in apartment_list:\n",
     "                link = 'https://batdongsan.com.vn/'+ apartment['href']\n",
     "                file.write(link)\n",
@@ -185,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read the \"real_estate_for_sale_links.txt\" file and store all the links to a lists"
+    "Read the `real_estate_for_sale_links.txt` file and store all the links to a lists"
    ]
   },
   {
@@ -252,16 +256,16 @@
    "source": [
     "sale_type = ['Căn hộ chung cư', 'Nhà riêng', 'Nhà biệt thự, liền kề', 'Nhà mặt phố', 'Shophouse nhà phố thương mại', 'Đất nền dự án', 'Đất bán', 'Trang trại, khu nghỉ dưỡng', 'Kho, nhà xưởng','Bất động sản khác']\n",
     "sale_type_dict = {\n",
-    "    '324': sale_type[0],#Chung cư\n",
-    "    '41': sale_type[1],#Nhà riêng\n",
-    "    '325': sale_type[2],#biệt thự\n",
-    "    '163': sale_type[3],#Nhà mặt phố\n",
-    "    '575': sale_type[4],#Shophouse\n",
-    "    '40': sale_type[5],#Đất nền\n",
-    "    '283': sale_type[6],#Bán đất\n",
-    "    '44': sale_type[7],#Trang trại\n",
-    "    '45': sale_type[8], #kho\n",
-    "    '48': sale_type[9], #Khác\n",
+    "    '324': sale_type[0], # Chung cư\n",
+    "    '41': sale_type[1], # Nhà riêng\n",
+    "    '325': sale_type[2], # biệt thự\n",
+    "    '163': sale_type[3], # Nhà mặt phố\n",
+    "    '575': sale_type[4], # Shophouse\n",
+    "    '40': sale_type[5], # Đất nền\n",
+    "    '283': sale_type[6], # Bán đất\n",
+    "    '44': sale_type[7], # Trang trại\n",
+    "    '45': sale_type[8], # kho\n",
+    "    '48': sale_type[9], # Khác\n",
     "}\n"
    ]
   },
