--- a/Notebook/Phase05_Conclusion _and_Reflection.ipynb
+++ b/Notebook/Phase05_Conclusion _and_Reflection.ipynb
@@ -47,7 +47,7 @@
     "- Making meaningful questions: \n",
     "    - In this part, we end up to some not simple question, and I have to find find the simplest way to present my ideas to ensure easy access to the information for everyone.\n",
     "- Build Model:\n",
-    "    - This field is new for me, while I do not have many experience to build a machine learnig model, but it also very interesting to find out some new knowledge.\n",
+    "    - This field is new for me, while I do not have many experience to build a machine learning model, but it also very interesting to find out some new knowledge.\n",
     "- Some difficulties come from my self: During this project, the lack of skills (consist of time management skill, technical skill and others) all make me so confused and took more time for the problem solving. My teammate , Tu Nhi, also help me a lot in this project, I want to give a special thanks to her.\n",
     "\n",
     "## **What I learn from this project:**\n",
