correnting some information

--- a/Notebook/Phase01.Part02.Collect_renting_data.ipynb
+++ b/Notebook/Phase01.Part02.Collect_renting_data.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "During our research of the website, we see that there is not clear Term of Service (or Use) toward people who access the website without an account, and there isn't any listed Disallow agent or terms in `Robots.txt`, and because we are using the data collected for education purposes, we decided that it is within the law - that is it's legal to collect and analyze the data we have collected from the website.\n",
     "\n",
-    "During our data collection, we've identify that the website uses Cloudguard technology to identify and prevent non-human agent to access and collect data. To bypass this, we're going to use the Cloudscraper library and some tricks - mainly changing the headers of the requests. "
+    "During our data collection, we've identify that the website uses Cloudflare technology to identify and prevent non-human agent to access and collect data. To bypass this, we're going to use the Cloudscraper library and some tricks - mainly changing the headers of the requests. "
    ]
   },
   {
